add BQ and PostgreSQL connectors, create handle package, expand abstract connectors